[package]
name = "qmk_hid"
version = "0.1.13"
edition = "2024"
license = "BSD-3-Clause"
description = "Commandline tool to interact with QMK devices via their raw HID interface"
authors = ["Daniel Schaefer <dhs@frame.work>"]
keywords = ["hid", "qmk", "keyboard"]
repository = "https://github.com/FrameworkComputer/qmk_hid"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hidapi = { version = "=2.6.4" }

[build-dependencies]
static_vcruntime = "3.0"
